made changes for AMO data

--- a/project1/ENSO.ipynb
+++ b/project1/ENSO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "7b2f535f-fd11-4a36-8bdf-5afe2442852b",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "7b500f9f-fd68-44d3-8d4b-8f15280b68e1",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "b7a223de-e5a3-4854-b675-0f9efc696c1f",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "[1848 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "72abca3d-3813-460a-9259-6f0110fa95b9",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
        "[460740 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,17 +584,17 @@
     "df_hurricane = df_hurricane[df_hurricane[\"Year\"] >= 1870]\n",
     "\n",
     "# Merge hurricane data with ENSO data on Year & Month\n",
-    "df_merged = df_hurricane.merge(df_enso_long, on=[\"Year\", \"Month\"], how=\"left\")\n",
+    "df_merged_ENSO = df_hurricane.merge(df_enso_long, on=[\"Year\", \"Month\"], how=\"left\")\n",
     "\n",
     "# Save merged dataset\n",
-    "df_merged.to_csv(\"../project1/merged_data.csv\", index=False)\n",
+    "df_merged_ENSO.to_csv(\"../project1/merged_enso.csv\", index=False)\n",
     "\n",
-    "df_merged\n"
+    "df_merged_ENSO\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "c4cc61c4-e20b-45a4-921c-a26a0a4a18bb",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "1c70dbf6-3ac7-4512-9585-af3c6d39d045",
    "metadata": {},
    "outputs": [
@@ -702,8 +702,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "50ecbeb5-9b9a-4634-a1ef-76e8437527fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Year    Month  AMO_Anomaly\n",
+      "0  1950  January        -0.06\n",
+      "1  1951  January        -0.04\n",
+      "2  1952  January        -0.45\n",
+      "3  1953  January         0.98\n",
+      "4  1954  January         0.13\n",
+      "        Storm_ID  Year                      ISO_Time   Latitude  Longitude  \\\n",
+      "0  1950224N17305  1950 1950-08-12 00:00:00.000040448  17.100000  -55.50000   \n",
+      "1  1950224N17305  1950 1950-08-12 00:00:00.000040448  17.100000  -55.50000   \n",
+      "2  1950224N17305  1950 1950-08-12 00:00:00.000040448  17.100000  -55.50000   \n",
+      "3  1950224N17305  1950 1950-08-12 00:00:00.000040448  17.100000  -55.50000   \n",
+      "4  1950224N17305  1950 1950-08-12 03:00:00.000040448  17.417561  -55.87215   \n",
+      "\n",
+      "   Storm_Intensity   Month  AMO_Anomaly  \n",
+      "0             35.0  August         0.16  \n",
+      "1             35.0  August         0.16  \n",
+      "2             35.0  August         0.16  \n",
+      "3             35.0  August         0.16  \n",
+      "4             37.0  August         0.16  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Merge AMO data with Hurricane NA Basin data\n",
+    "\n",
+    "#Load AMO data\n",
+    "amo_path = \"../project1/csu_amo.csv\"\n",
+    "df_amo = pd.read_csv(amo_path)\n",
+    "\n",
+    "#Filter Hurricane data to start at 1950\n",
+    "df_hurricane = df_hurricane[df_hurricane[\"Year\"] >= 1950]\n",
+    "\n",
+    "# Convert AMO data to long format\n",
+    "df_amo_long = df_amo.melt(id_vars=[\"Year\"], var_name=\"Month\", value_name=\"AMO_Anomaly\")\n",
+    "\n",
+    "# Ensure Month names match the hurricane dataset\n",
+    "month_map = {\n",
+    "    \"Jan\": \"January\", \"Feb\": \"February\", \"Mar\": \"March\", \"Apr\": \"April\", \"May\": \"May\", \"Jun\": \"June\",\n",
+    "    \"Jul\": \"July\", \"Aug\": \"August\", \"Sep\": \"September\", \"Oct\": \"October\", \"Nov\": \"November\", \"Dec\": \"December\"\n",
+    "}\n",
+    "df_amo_long[\"Month\"] = df_amo_long[\"Month\"].map(month_map)\n",
+    "\n",
+    "# Convert data types to match hurricane dataset\n",
+    "df_amo_long[\"Year\"] = df_amo_long[\"Year\"].astype(int)\n",
+    "df_amo_long[\"Month\"] = df_amo_long[\"Month\"].astype(str)\n",
+    "\n",
+    "print(df_amo_long.head())  # Check transformed data\n",
+    "\n",
+    "df_merge_amo = df_hurricane.merge(df_amo_long, on=[\"Year\", \"Month\"], how=\"left\")\n",
+    "\n",
+    "# Save merged dataset\n",
+    "df_merge_amo.to_csv(\"../project1/merged_amo.csv\", index=False)\n",
+    "\n",
+    "print(df_merge_amo.head())  # Check if AMO values appear\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "269f9e85-135a-4e48-9ab0-cdd5af809982",
    "metadata": {},
    "outputs": [],
    "source": []
