made structural changes

--- a/project1/ENSO.ipynb
+++ b/project1/ENSO.ipynb
@@ -22,8 +22,16 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.decomposition import PCA\n",
-    "\n",
+    "from sklearn.decomposition import PCA\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "7b500f9f-fd68-44d3-8d4b-8f15280b68e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define file paths\n",
     "data_dir = \"../project1\"\n",
     "hurricane_nc_path = os.path.join(data_dir, \"IBTrACS.NA.v04r00.nc\")\n",
@@ -51,16 +59,8 @@
     "try:\n",
     "    ds = xr.open_dataset(hurricane_nc_path)\n",
     "except Exception as e:\n",
-    "    print(f\"Request failed: {e}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "id": "7b500f9f-fd68-44d3-8d4b-8f15280b68e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print(f\"Request failed: {e}\")\n",
+    "\n",
     "# Convert NetCDF dataset to Pandas DataFrame\n",
     "df_hurricane = ds.to_dataframe().reset_index()\n",
     "\n",
